syntax = "proto3";

package chatbot;

message QuickReply {
	string id = 1;
	string text = 2;
}

message TextResponseBlock {
  string type = 1; // "textResponse"
  string content = 2;
  repeated string alternateResponses = 3;
  repeated QuickReply quickReplies = 4;
  string ToComponentType = 5; 
  string ToComponentId = 6; 
  int32 StoryId = 7;
  string QuickReplyId = 8;
  int32 BotId = 9;
}
